[gd_scene load_steps=5 format=3 uid="uid://coil8siiotaun"]

[ext_resource type="Script" uid="uid://lskhmonhsbhp" path="res://scenes/ui/DialogueBox.gd" id="1_2c88n"]
[ext_resource type="Texture2D" uid="uid://cer1dda87356e" path="res://ui/styles/chatbox.png" id="2_ggoq5"]
[ext_resource type="FontFile" uid="uid://cpfjwf504s6no" path="res://assets/fonts/KellsFLF.ttf" id="3_nfm5p"]
[ext_resource type="FontFile" uid="uid://b6fk4o6k6dmrn" path="res://assets/fonts/Raleway-SemiBold.ttf" id="4_bjuha"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_2c88n")
wrap_width = 280

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 96.0
offset_bottom = 96.0
texture = ExtResource("2_ggoq5")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Header" type="Control" parent="BG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="SpeakerLabel" type="Label" parent="BG/Header"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.2509804, 0.13333334, 0.10980392, 1)
theme_override_colors/font_outline_color = Color(0.22099712, 0.114727266, 0.093479104, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_nfm5p")
theme_override_font_sizes/font_size = 10
horizontal_alignment = 3

[node name="Body" type="RichTextLabel" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 40.0
offset_right = -8.0
offset_bottom = 72.0
theme_override_colors/default_color = Color(0.2509804, 0.13333334, 0.10980392, 1)
theme_override_fonts/normal_font = ExtResource("4_bjuha")
theme_override_fonts/bold_font = ExtResource("4_bjuha")
theme_override_font_sizes/normal_font_size = 6
theme_override_font_sizes/bold_font_size = 6
theme_override_font_sizes/bold_italics_font_size = 6
theme_override_font_sizes/italics_font_size = 6
theme_override_font_sizes/mono_font_size = 6
fit_content = true

[node name="ChoicesRow" type="HBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -16.0
